trustfall_core/test_data/tests/valid_queries/alias_driven_tag_and_output_names.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    One {
        one: value @tag @output

        successor {
            value @output(name: "successor") @filter(op: ">", value: ["%one"])
        }
    }
}"#,
    arguments: {},
)
