trustfall_core/test_data/tests/parse_errors/filter_with_tag_string_instead_of_array_with_tag_string.graphql.ron
TestGraphQLQuery (
    // The `value` in a filter expects an array with a single string instead of
    // just a single value.
    //
    // This test explicitly checks this using a tag reference (a string prefixed
    // by a percent sign).
    schema_name: "numbers",
    query: r#"
{
    Zero {
        value @tag(name: "zerovalue")
        value @filter(op: "=", value: "%zerovalue")
    }
}"#,
    arguments: {},
)
